--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
